--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@
   <div class="neon-box">
     <h1>Happy Girlfriend's Day ♥️ Babe</h1>
     <p>
-      ✨ From the moment you entered my life, love found its true meaning. 💞 <br>
-      😍 Your smile is my sunrise, and your laughter is my favorite melody. 🎶💫 <br>
-      🌈 You are the poem my heart recites, the peace my soul seeks, the forever I prayed for. 🙏❤️ <br>
-      💓 With every beat of my heart, I fall deeper into the magic of you. 🌹🔥<br>
+      💞 You walked in, and love made sense. ✨ <br>
+      💘 Your love is my spark, your smile my sunshine! ☀️😍<br>
+      💖 You're my favorite feeling and my sweetest reason,✨💕 <br>
+      💓 With you, every beat of my heart, feel like magic🌹🔥<br>
       🌙 You are my moon in the dark, my calm in chaos, my always and forever. 💖🌌
     </p>
     
