--- a/index.html
+++ b/index.html
@@ -190,9 +190,7 @@
   <div class="neon-box">
     <h1>Happy Girlfriend's Day ♥️ Babe</h1>
     <p>
-      💞 You walked in, and love made sense. ✨ <br>
-      💘 Your love is my spark, your smile my sunshine! ☀️😍<br>
-      💖 You're my favorite feeling and my sweetest reason,✨💕 <br>
+      💘 Your love is my spark, your smile my sunshine! ☀️<br>
       💓 With you, every beat of my heart, feel like magic🌹🔥<br>
       🌙 You are my moon in the dark, my calm in chaos, my always and forever. 💖🌌
     </p>
