--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
   <div class="neon-box">
     <h1>Happy Girlfriend's Day ♥️ Babe</h1>
     <p>
+      🥲 Being with you feels like magical moment 🪄 <br>
       💘 Your love is my spark, your smile my sunshine! ☀️<br>
       💓 With you, every beat of my heart, feel like magic🌹🔥<br>
       🌙 You are my moon in the dark, my calm in chaos, my always and forever. 💖🌌
